[REFACTOR] 홈 관련 API 리팩토링 및 queryDSL 적용